[gd_scene load_steps=10 format=3 uid="uid://byx4kh8ochsja"]

[ext_resource type="PackedScene" uid="uid://cno2pfamxwi0u" path="res://project/02_static/Modal.tscn" id="1_wdwm5"]
[ext_resource type="Script" path="res://project/02_static/modal/OptionModal.gd" id="2_npwev"]
[ext_resource type="Texture2D" uid="uid://dnts7qmhsih6v" path="res://resource/ui/common_frame.png" id="3_i1gtp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n372k"]
texture = ExtResource("3_i1gtp")
margin_left = 6.45449
margin_top = 12.909
margin_right = 6.45449
margin_bottom = 14.4458
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 240, 72)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0j4o3"]
content_margin_bottom = 10.0
draw_center = false
border_width_bottom = 1

[sub_resource type="ButtonGroup" id="ButtonGroup_ypgwn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3pn3"]
content_margin_top = 15.0
content_margin_bottom = 10.0
draw_center = false
border_width_bottom = 1

[sub_resource type="ButtonGroup" id="ButtonGroup_jd7f8"]

[sub_resource type="ButtonGroup" id="ButtonGroup_g27xx"]

[node name="OptionModal" instance=ExtResource("1_wdwm5")]
script = ExtResource("2_npwev")

[node name="panel" parent="." index="1"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(640, 420)
theme_override_styles/panel = SubResource("StyleBoxTexture_n372k")

[node name="margin" parent="panel/margin/contents" index="0"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="scroller" type="ScrollContainer" parent="panel/margin/contents/margin" index="0"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="contents" type="VBoxContainer" parent="panel/margin/contents/margin/scroller" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="section1" type="Label" parent="panel/margin/contents/margin/scroller/contents" index="0"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_0j4o3")
text = "Window Mode"
horizontal_alignment = 1
vertical_alignment = 2

[node name="window_mode" type="HBoxContainer" parent="panel/margin/contents/margin/scroller/contents" index="1"]
layout_mode = 2

[node name="small" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/window_mode" index="0"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
theme_override_constants/h_separation = 10
button_pressed = true
button_group = SubResource("ButtonGroup_ypgwn")
text = "960x600"

[node name="midium" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/window_mode" index="1"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
theme_override_constants/h_separation = 10
button_group = SubResource("ButtonGroup_ypgwn")
text = "1280x800"

[node name="big" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/window_mode" index="2"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
theme_override_constants/h_separation = 10
button_group = SubResource("ButtonGroup_ypgwn")
text = "1440x900"

[node name="fullscreen" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/window_mode" index="3"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
theme_override_constants/h_separation = 10
button_group = SubResource("ButtonGroup_ypgwn")
text = "FullScreen"

[node name="section2" type="Label" parent="panel/margin/contents/margin/scroller/contents" index="2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_j3pn3")
text = "Sound Volume"
horizontal_alignment = 1
vertical_alignment = 2

[node name="bgm_volume" type="HBoxContainer" parent="panel/margin/contents/margin/scroller/contents" index="3"]
layout_mode = 2

[node name="label" type="Label" parent="panel/margin/contents/margin/scroller/contents/bgm_volume" index="0"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "BGM"
horizontal_alignment = 1

[node name="slider" type="HSlider" parent="panel/margin/contents/margin/scroller/contents/bgm_volume" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
step = 10.0
value = 100.0

[node name="se_volume" type="HBoxContainer" parent="panel/margin/contents/margin/scroller/contents" index="4"]
layout_mode = 2

[node name="label" type="Label" parent="panel/margin/contents/margin/scroller/contents/se_volume" index="0"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SE"
horizontal_alignment = 1

[node name="slider" type="HSlider" parent="panel/margin/contents/margin/scroller/contents/se_volume" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
step = 10.0
value = 100.0

[node name="section3" type="Label" parent="panel/margin/contents/margin/scroller/contents" index="5"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_j3pn3")
text = "Game Setting"
horizontal_alignment = 1
vertical_alignment = 2

[node name="text_speed" type="HBoxContainer" parent="panel/margin/contents/margin/scroller/contents" index="6"]
layout_mode = 2

[node name="label" type="Label" parent="panel/margin/contents/margin/scroller/contents/text_speed" index="0"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "テキスト表示設定"

[node name="contents" type="HBoxContainer" parent="panel/margin/contents/margin/scroller/contents/text_speed" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="slow" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/text_speed/contents" index="0"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
button_group = SubResource("ButtonGroup_jd7f8")
text = "遅い"

[node name="normal" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/text_speed/contents" index="1"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
button_pressed = true
button_group = SubResource("ButtonGroup_jd7f8")
text = "標準"

[node name="high" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/text_speed/contents" index="2"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
button_group = SubResource("ButtonGroup_jd7f8")
text = "早い"

[node name="nowait" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/text_speed/contents" index="3"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
button_group = SubResource("ButtonGroup_jd7f8")
text = "瞬間"

[node name="move_type" type="HBoxContainer" parent="panel/margin/contents/margin/scroller/contents" index="7"]
layout_mode = 2

[node name="label" type="Label" parent="panel/margin/contents/margin/scroller/contents/move_type" index="0"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "移動タイプ"

[node name="contents" type="HBoxContainer" parent="panel/margin/contents/margin/scroller/contents/move_type" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="default_walk" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/move_type/contents" index="0"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
theme_override_constants/h_separation = 10
button_pressed = true
button_group = SubResource("ButtonGroup_g27xx")
text = "常時:歩き 押下:走り"

[node name="default_run" type="CheckBox" parent="panel/margin/contents/margin/scroller/contents/move_type/contents" index="1"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.470588, 0, 1)
theme_override_constants/h_separation = 10
button_group = SubResource("ButtonGroup_g27xx")
text = "常時:走り 押下:歩き"

[node name="button1" parent="panel/margin/contents/buttons" index="0"]
custom_minimum_size = Vector2(180, 50)
text = "DEFAULT"

[node name="button2" parent="panel/margin/contents/buttons" index="1"]
custom_minimum_size = Vector2(180, 50)
text = "CANCEL"

[node name="button3" parent="panel/margin/contents/buttons" index="2"]
custom_minimum_size = Vector2(180, 50)
text = "OK"
